--- a/src/COMPONENT/REGISTER/register.module.css
+++ b/src/COMPONENT/REGISTER/register.module.css
@@ -49,7 +49,7 @@
     left: 50%;
     top: 70%;
     transform: translate(-50%,-70%);
-    width: 400px;
+    width: 450px;
     height: 150px;
 }
 
@@ -64,7 +64,7 @@
 }
 .right h1{
     text-align: center;
-    margin-top: 130px;
+    margin-top: 70px;
     color: white;
     font-size: 50px;
 }
@@ -75,7 +75,7 @@
     transform: translate(-50%,-50%);
 }
 .right input{
-    margin: 20px;
+    margin: 12px;
     height: 40px;
     width: 250px;
     padding: 0 10px;
@@ -85,7 +85,7 @@
     border-radius: 10px;
 }
 .right button{
-    margin-top:90px;
+    margin-top:180px;
     width: 80px;
     height: 30px;
     outline: none;
@@ -97,12 +97,21 @@
     cursor: pointer;
 }
 .right a{
-    margin-top: 140px;
+    margin-top: 260px;
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: 
+    #00ff6a;
     word-spacing: 5px;
     letter-spacing: 2px;
 }
 .right a:hover{
     color: #c9ddd6;
+}
+.right p{
+    margin-top: 380px;
+    text-align: center;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    word-spacing: 5px;
+    letter-spacing: 2px;
 }
