--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,46 @@
-:root{
-    --yellow: #f5c32c;
-    --orange: #fca61f;
-    --gray: rgba(36, 45, 73, 0.65);
-    --black: #242d49;
-    --profileShadow: 0px 4px 17px 2px rgba(0, 0, 0, 0.25);
-    --cardColor: rgba(255, 255, 255, 0.64);
-    --hrColor: #cfcdcd;
-    --buttonBg: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
-    --inputColor: rgba(40, 52, 62, 0.07);
-    --photo: #4cb256;
-    --location: #EF5757;
-    --shedule: #E1AE4A;
-    --video: #1100ff;
+:root {
+  --yellow: #f5c32c;
+  --orange: #fca61f;
+  --gray: rgba(36, 45, 73, 0.65);
+  --black: #242d49;
+  --profileShadow: 0px 4px 17px 2px rgba(0, 0, 0, 0.25);
+  --cardColor: rgba(255, 255, 255, 0.64);
+  --hrColor: #cfcdcd;
+  --buttonBg: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
+  --inputColor: rgba(40, 52, 62, 0.07);
+  --photo: #4cb256;
+  --location: #ef5757;
+  --shedule: #e1ae4a;
+  --video: #1100ff;
 }
 
-.App{
-    overflow: hidden;
-    color: (--black);
-    padding: 1rem 1rem;
+.App {
+  overflow: hidden;
+  color: (--black);
+  padding: 1rem 1rem;
 }
 
-.button{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   color: #ffffff; 
-   border-radius: 0.5rem;
-   border: none;
-   background: #5e6eff;
-   transition: all 100ms each-out;
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  border-radius: 0.5rem;
+  border: none;
+  background: #5e6eff;
+  transition: all 100ms each-out;
 }
-.button:hover{
-    cursor: pointer;
-    color: red;
-    background: transparent;
-    border: 1.5px solid red;
+.button:hover {
+  cursor: pointer;
+  color: red;
+  background: transparent;
+  border: 1.5px solid red;
 }
 
-
-::-webkit-scrollbar{
-    display: none;
+::-webkit-scrollbar {
+  display: none;
 }
-.r-button{
-    padding: 10px;
-    font-size: 18px;
+.r-button {
+  padding: 10px;
+  font-size: 18px;
 }
